--- a/Programs/style.css
+++ b/Programs/style.css
@@ -113,3 +113,31 @@ color: rgb(122, 122, 122);
     padding-bottom: 20px;
     padding-left: 40px;
 }
+.footer-cta{
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: white;
+    padding-top: 25px;
+}
+.collab{
+    background-color: rgb(43,114,255);
+    border-radius: 25px;
+}
+.jinus{
+    padding-top: 65px;
+    padding-bottom: 50px;
+}
+.juib{
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 52.8px;
+    color: rgb(5, 4, 127);
+}
+.build{
+    color: white;
+    background-color: rgb(5,4,127);
+}
