--- a/Impact/style.css
+++ b/Impact/style.css
@@ -31,6 +31,7 @@ font-size: 18.4px;
 font-weight: 500;
 line-height: 27.6px;
 color: rgb(5, 4, 127);
+
 }
 .flex-academic-container{
     display: flex;
@@ -202,4 +203,14 @@ font-size: 16px;
 font-weight: 400;
 line-height: 24px;
 color: rgb(122, 122, 122);
+}
+.oma{
+    font-family: Poppins, sans-serif;
+font-size: 18.4px;
+font-weight: 400;
+line-height: 27.6px;
+color: rgb(255, 255, 255);
+text-align: center;
+padding-left: 5%;
+padding-right: 5%;
 }
