added a logo to the footer on the homepage

--- a/Home/style.css
+++ b/Home/style.css
@@ -155,7 +155,7 @@
 .flex-footer-container{
     background-color: rgb(5,4,127);
 }
-.flex-logo-container{
+.flex-ftr-container{
     padding-top: 70px;
     padding-bottom: 20px;
     padding-left: 100px;
