modified the homepage

--- a/Home/style.css
+++ b/Home/style.css
@@ -102,7 +102,8 @@
     padding-left: 50px;
 }
 .ain{
-    padding-left: 100px;
+    border-radius: 15px;
+    padding-left: 150px;
 }
 .srvcs{
     font-family: Roboto, sans-serif;
