--- a/Impact/style.css
+++ b/Impact/style.css
@@ -136,6 +136,7 @@ padding-bottom: 4%;
     width: 200px;
     height: 50px;
     padding-left: 50px;
+    padding: top 14px;
 }
 .partners{
     font-family: Poppins, sans-serif;
@@ -148,6 +149,7 @@ padding-bottom: 4%;
 }
 .flex-partners-container-2{
     padding-left: 120px;
+    padding-right: 70px;
 }
 .flex-partners-container-3{
     background-color: rgb(255,210,0);
@@ -213,4 +215,48 @@ color: rgb(255, 255, 255);
 text-align: center;
 padding-left: 5%;
 padding-right: 5%;
+}
+.flex-footer-container{
+    background-color: rgb(5,4,127);
+}
+.flex-logo-container{
+    padding-top: 25px;
+    padding-bottom: 15px;
+    padding-left: 30px;
+}
+.footer-cta{
+    font-family: Poppins, sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: white;
+    padding-top: 25px;
+}
+.collab{
+    background-color: rgb(43,114,255);
+    border-radius: 25px;
+}
+.jinus{
+    padding-top: 65px;
+    padding-bottom: 50px;
+}
+.juib{
+    text-align: center;
+    font-family: Poppins, sans-serif;
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 52.8px;
+    color: rgb(5, 4, 127);
+}
+.build{
+    color: white;
+    background-color: rgb(5,4,127);
+}
+.img{
+    width: 150px;
+    height: auto;
+}
+.coni{
+    width: 1.5pc;
+    height: auto;
 }
