--- a/Home/style.css
+++ b/Home/style.css
@@ -206,6 +206,29 @@
 .tgln{
     text-align: center;
 }
+.zip{
+    font-family: Roboto, sans-serif;
+font-size: 20px;
+font-weight: 500;
+line-height: 16.5088px;
+color: rgb(0, 37, 142);
+
+}
+.col{
+    font-family: Poppins, sans-serif;
+font-size: 48px;
+font-weight: 500;
+line-height: 52.8px;
+color: rgb(5, 4, 127);
+font-weight: 5o8;
+}
+.man{
+    font-family: Poppins, sans-serif;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+color: rgb(122, 122, 122);
+}
 .join-section {
   background-color: #2563eb; 
   padding: 100px 20px;       
